--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply from: 'buildsystem/ci.gradle'
 apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
-  ext.kotlin_version = '1.2.51'
+  ext.kotlin_version = '1.3.20'
   ext.gradle_tools = '3.1.3'
   ext.build_tools = '27.0.3'
 
@@ -18,12 +18,14 @@ buildscript {
   repositories {
     google()
     jcenter()
+    mavenCentral()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.1'
-    //noinspection DifferentKotlinGradleVersion
+    classpath 'com.android.tools.build:gradle:3.3.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+
   }
 }
 
@@ -31,6 +33,7 @@ allprojects {
   repositories {
     google()
     jcenter()
+    mavenCentral()
   }
 }
 
